# danni-bg

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  biome.json  bunfig.toml  danni.config.example.json  docker-compose.prod.yml  docker-compose.yml  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/explorer-api/: package.json
apps/explorer-web/: index.html  package.json  playwright.config.ts  tsconfig.json  (+1 more)
docs/: ARCHITECTURE.md  CONSUMERS.md  OPERATIONS.md  semantic-search.md
eval/agentic/: .env.example  README.md  cases.py  chat_client.py  config.py  conftest.py  guards.py  judge.py  metrics.py  pyproject.toml  test_agentic.py
infra/: README.md
migrations/: 001_core.sql  002_curate_enrich.sql  003_index.sql  004_index_failures.sql  005_index_state.sql  006_crawl_checkpoint.sql  007_entity_relations.sql  008_users.sql  009_platform_settings.sql  010_token_usage.sql  011_token_usage_cached.sql  012_user_avatar.sql  013_chat_sessions.sql  014_message_usage_duration.sql  015_api_keys.sql  016_api_usage.sql  017_multi_tenancy.sql
scripts/: check-secrets.ts  docker-entrypoint.sh
tests/: parity-matrix-check.ts  parity-matrix.json  setup.ts
(+718 files in other folders)
