[project]
name = "danni-agentic-eval"
version = "0.1.0"
description = "Offline agentic quality evals for the danni-bg grounded chat (DeepEval)."
requires-python = ">=3.11"
dependencies = [
    "deepeval>=2.0.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = "-v -ra"
testpaths = ["."]
